--- a/_sass/docs/_code-highlighting.scss
+++ b/_sass/docs/_code-highlighting.scss
@@ -8,7 +8,7 @@ div.highlight {
 
 pre {
   background-color: #FFF;
-  border-radius: 3px;
+  border-radius: $border-radius;
   box-shadow: 0 0 0 1px darken($background-color, 8%);
   font-size: $small-font-size;
   margin: 2.5em 0 1em 0;
@@ -27,7 +27,7 @@ pre {
 
   &::-webkit-scrollbar-thumb {
       background-color: darken($background-color, 10%);
-      border-radius: 4px;
+      border-radius: $border-radius;
       box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
   }
   &::-webkit-scrollbar-corner {
