--- a/_sass/docs/_variables.scss
+++ b/_sass/docs/_variables.scss
@@ -7,6 +7,7 @@
 $base-border-color: hsl(43, 23%, 90%);
 $base-font-size: 1em;
 $small-font-size: 13px;
+$button-width: 154px;
 
 $base-font-family: $helvetica;
 $heading-font-family: "proxima-nova-soft", $helvetica;
